force-app/main/default/objects/NCMT_Quality_Code_Lookup__c/NCMT_Quality_Code_Lookup__c.object-meta.xml
<CustomObject>
    <description>NCMT Quality Parameters</description>
    <label>Quality Code Lookup</label>
    <nameField>
        <displayFormat>QL-{00000}</displayFormat>
        <label>Quality Lookup</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Code Lookups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>