force-app/main/default/objects/NCMT_Quality_Code_Lookup__c/fields/Building_Code__c.field-meta.xml
<CustomField>
    <fullName>Building_Code__c</fullName>
    <description>Building Parameter</description>
    <label>Building Code</label>
    <referenceTo>NCMT_Building_Parameter__c</referenceTo>
    <relationshipLabel>Quality Code Lookups</relationshipLabel>
    <relationshipName>Quality_Parameters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>