force-app/main/default/objects/NCMT_Quality_Code_Lookup__c/fields/Location_Quality_code__c.field-meta.xml
<CustomField>
    <fullName>Location_Quality_code__c</fullName>
    <description>Location Quality Code</description>
    <label>Location Quality code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>