force-app/main/default/objects/NCMT_Quality_Code_Lookup__c/fields/Quality_Type__c.field-meta.xml
<CustomField>
    <fullName>Quality_Type__c</fullName>
    <description>NCMT Quality Type</description>
    <label>Quality Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P100: Monumental</fullName>
            </value>
            <value>
                <fullName>P100: Landmark</fullName>
            </value>
            <value>
                <fullName>P100: Baseline</fullName>
            </value>
            <value>
                <fullName>Class A</fullName>
            </value>
            <value>
                <fullName>Code Minimum</fullName>
            </value>
            <value>
                <fullName>P100: Design Excellence</fullName>
                <isActive>false</isActive>
                <label>P100: Design Excellence</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>