force-app/main/default/objects/NCMT_Quality_Code_Lookup__c/fields/Site_Remoteness__c.field-meta.xml
<CustomField>
    <fullName>Site_Remoteness__c</fullName>
    <description>NCMT Site Remoteness</description>
    <label>Site Remoteness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central Business District</fullName>
            </value>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Suburban</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Very remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>