force-app/main/default/objects/NCMT_Quality_Code_Lookup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Building_Code__c</columns>
    <columns>Quality_Type__c</columns>
    <columns>Location_Quality_code__c</columns>
    <columns>Site_Remoteness__c</columns>
    <columns>Quality_Code_Parameter__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>